--- a/5.html
+++ b/5.html
@@ -11,6 +11,10 @@ html {
 *, *:before, *:after {
   box-sizing: inherit;
 }
+	@viewport {
+  width: device-width ;
+  zoom: 1.0 ;
+}
 #row{
   align-items: center;
   position:sticky;
@@ -29,7 +33,7 @@ html {
   .column {
     width: 100%;
     display: block;
-    background-color: green;
+    background-color: #1B2631;
   }
 }
 
