--- a/4.html
+++ b/4.html
@@ -2,6 +2,7 @@
 <head>
 <title>CSS</title>
 <link rel="stylesheet" type="text/css" href="style4.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <div class="header">
