--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <head>
 <title>CSS</title>
 <link rel="stylesheet" type="text/css" href="style1.css">
+    
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <div id="abc">
