--- a/2.html
+++ b/2.html
@@ -11,6 +11,7 @@
           <li><a href="4.html">Projects</a></li>
           <li><a href="5.html">Team</a></li>
           <li><a href="#">Contact Us</a></li>
+          <li><a href="*">Contact me</a></li>
         </ul>
     </nav>
 </div>
