--- a/3.html
+++ b/3.html
@@ -13,6 +13,7 @@
 					<li><a href="4.html">Projects</a></li>
 					<li><a href="5.html">Team</a></li>
 					<li><a href="6.html">About Us</a></li>
+					<li><a href="7.html">About me</a></li>
 				</ul>
 		</nav>
 </div>
